--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1085,6 +1085,7 @@ p {
     background-color: #1a1e21;
     color: #7e7e7e;
     font-size: 14px !important;
+    height: 450px;
 }
 
 .footer-top p {
