--- a/src/app/admin/assets/css/style.css
+++ b/src/app/admin/assets/css/style.css
@@ -40,3 +40,7 @@ ul{
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
+
+    .logout-icon{
+        font-size: 20px;
+    }
