--- a/src/app/admin/components/scientificdetail/scientificdetail.component.html
+++ b/src/app/admin/components/scientificdetail/scientificdetail.component.html
@@ -36,7 +36,7 @@
               <h4><b>Price </b><h6>({{stringObject.price.date}})</h6></h4>
               <p>$ {{stringObject.price.price1}}</p>
           </div>  
-          <button class="btn btn-danger" (click)="deletescientific()" >Delete</button>
+          <button class="btn btn-danger"  (click)="deletescientific()" ><i class="fas fa-trash-alt trash-icon">Delete</i></button>
            
         </div>
       
