--- a/src/app/user/component/MedicineApp/medicinecomponent.html
+++ b/src/app/user/component/MedicineApp/medicinecomponent.html
@@ -44,7 +44,7 @@
 <div class="home-product">
   <div class="row sm-gutter">
     <!-- product item -->
-    <div class="col-md-3" *ngFor="let p of medicine">
+    <div class="col-md-3" *ngFor="let p of medicine | paginate:{itemsPerPage:12,currentPage:p} ">
       <a style="height: 100%;" class="home-product-item" [routerLink]="['/medicinedetail',{id:p.id}]"> <!--link-->
         <div class="home-product-item-img" style="background-image: url(https://localhost:5001/Image/{{p.illustration}})">
         </div>
@@ -68,6 +68,10 @@
     </div>
   </div>
 </div>
+<!-- pagination -->
+<br><br>
+<pagination-controls style="text-align: center;" (pageChange)="p= $event"></pagination-controls>
+
 </div>
 
 <br>
